# mega-minecraft

./: .gitignore  CMakeLists.txt  README.md  timings.txt
cmake/: CUDAComputesList.cmake  FindOptiX.cmake
shaders/: bloom_blur.frag.glsl  defines.glsl  lambert.frag.glsl  lambert.vert.glsl  passthrough.frag.glsl  passthrough.vert.glsl  passthrough_uvs.frag.glsl  passthrough_uvs.vert.glsl  postprocess_1.frag.glsl  postprocess_final.frag.glsl  postprocess_tone_mapping.frag.glsl  shadow.frag.glsl  shadow.vert.glsl  sky.frag.glsl  volume_fill.comp.glsl  volume_raymarch.comp.glsl
src/: defines.hpp  main.cpp  main.hpp
src/cuda/: cudaUtils.hpp  cuda_utils.cpp  cuda_utils.hpp
src/dp/math/: Config.h  Vecnt.h  math.h
src/player/: player.cpp  player.hpp
src/rendering/: d3d11Renderer.cpp  d3d11Renderer.h  drawable.cpp  drawable.hpp  fullscreenTri.cpp  fullscreenTri.hpp  optixRenderer.cpp  optixRenderer.cu  optixRenderer.hpp  renderer.cpp  renderer.hpp  renderingUtils.cpp  renderingUtils.hpp  shaderProgram.cpp  shaderProgram.hpp  structs.hpp
src/shaders/: basic_shaders.cu  optixRenderer.cu  random_number_generators.h  shader_commons.h
src/terrain/: biome.cpp  biome.hpp  biomeFuncs.hpp  block.cpp  block.hpp  chunk.cpp  chunk.cu  chunk.hpp  featurePlacement.hpp  terrain.cpp  terrain.hpp
src/util/: common.h  enums.hpp  rng.hpp  utils.cpp  utils.hpp
textures/: blocks_diffuse.xcf  blocks_emissive.xcf
